src/window/snapshots/tvision__window__window__tests__selected_window_with_scrollbar_snapshot.snap
---
source: src/window/window.rs
expression: screen.snapshot()
---
size: 24x8
cursor: hidden
text:
|╔═[■]════ Edit ══1═[↑]═╗|
|║                      ▲|
|║                      ▓|
|║                      ▓|
|║                      ▓|
|║                      ▓|
|║                      ▼|
|└─════════════════════─┘|
attr:
|aaabaaaaaaaaaaaaaaaabaaa|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|bbaaaaaaaaaaaaaaaaaaaabb|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(10) bg=BIOS(1)
  c fg=BIOS(1) bg=BIOS(3)
