src/window/snapshots/tvision__window__window__tests__zoom_restored.snap
---
source: src/window/window.rs
expression: "render_window(&mut w, &theme, 24, 8)"
---
size: 24x8
cursor: hidden
text:
|╔═[■]Edit[↑]═╗          |
|║            ▲          |
|║            ▓          |
|║            ▼          |
|└─══════════─┘          |
|                        |
|                        |
|                        |
attr:
|aaabaaaaaabaaa..........|
|aaaaaaaaaaaaac..........|
|aaaaaaaaaaaaac..........|
|aaaaaaaaaaaaac..........|
|bbaaaaaaaaaabb..........|
|........................|
|........................|
|........................|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(10) bg=BIOS(1)
  c fg=BIOS(1) bg=BIOS(3)
